--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,20 @@ h1{
 
 h2 {
 	font-size: 2rem;
-	font-weight: 300;
+	font-weight: 600;
 	text-transform: capitalize;
+}
+
+h3 {
+	margin-bottom: 20px;
+	font-size: 1.5rem;
+	text-transform: uppercase;
+}
+
+p {
+	line-height: 1.4rem;
+	font-size: .8rem;
+	color: #777;
 }
 
 section {
@@ -25,6 +37,22 @@ ul {
 
 li {
 	list-style-type: none;
+}
+
+.red {
+	background-color: #ED6D7B;
+}
+
+.blue {
+	background-color: #6FD2FA;
+}
+
+.green {
+	background-color: #62D7AC;
+}
+
+.yellow {
+	background-color: #F2C852;
 }
 
 .clear-fix::after, .row::after {
@@ -55,8 +83,20 @@ li {
 }
 
 .title-group {
-	margin: 100px;
+	margin-bottom: 60px;
 	text-align: center;
+}
+
+.long {
+	border-style: solid;
+	width: 50px;
+	color: #6FD2FA;
+}
+
+.short {
+	border-style: solid;
+	width: 15px;
+	color: #6FD2FA;
 }
 
 /* Grid*/
@@ -67,8 +107,25 @@ li {
 .col-6 {
 	float: left;
 	box-sizing: border-box;
+	margin-bottom: 80px;
 	padding: 0 60px;
 	width: 50%;
+}
+
+.col-4 {
+	float: left;
+	box-sizing: border-box;
+	padding: 0 ;
+	margin-bottom: 80px;
+	width: 33%;
+}
+
+.col-3 {
+	float: left;
+	box-sizing: border-box;
+	margin-bottom: 80px;
+	padding: 0 ;
+	width: 25%;
 }
 
 #logo {
@@ -136,7 +193,7 @@ nav a:hover{
 
 #about h2 {
 	font-size: 2rem;
-	font-weight: 300;
+	font-weight: 600;
 	margin-bottom: 40px;
 }
 
@@ -162,16 +219,110 @@ nav a:hover{
 	top: -30px;
 	left: -30px;
 }
-
+/*
+#about .title-group {
+	margin-top: 100px;
+}
+*/
 #about label {
+	margin-bottom: 15px;
 	text-transform: uppercase;
 	font-size: 1.1rem
 	letter-spacing: 2px;
 }
 
 #about .progress-bar {
+	margin-top: 15px;
 	margin-bottom: 45px;
 	width: 100%;
 	height: 6px;
 	background-color: #ccc;
+}
+
+#about .progress-bar .progress {
+	height: 6px;
+}
+
+#about .progress-bar .progress .persentage {
+	position: relative;
+    top: -25px;
+    right: -20px;
+    text-align: right;
+}
+
+#working-process {
+	background: url(http://loremflickr.com/2000/900);
+	-webkit-background-size: cover;
+	background-size: cover;
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
+	text-align: center;
+}
+
+#working-process .col-3 {
+	padding: 50px 22px 60px 22px;
+}
+
+#working-process .col-3:hover {
+	background-color: #fff;
+	border-bottom-color: #6FD2FA;
+	border-top-width: 2px;
+
+}
+
+#working-process img {
+	margin-bottom: 25px;
+}
+
+#working-process h3 {
+	margin-bottom: 20px;
+	font-size: 1.5rem;
+	text-transform: uppercase;
+}
+
+#working-process p {
+	line-height: 1.4rem;
+	font-size: .8rem;
+	color: #777;
+}
+
+#what-we-do img {
+	float: left;
+	margin: 50px 25px;
+	
+}
+
+#sale-info {
+	background: url(http://loremflickr.com/2000/500);
+	-webkit-background-size: cover;
+	background-size: cover;
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
+	text-align: center;
+}
+
+#sale-info h3 {
+	color: #FAFAFA;
+}
+
+#pricing-table {
+	background-color: #FAFAFA;
+}
+
+#pricing-table .col-3 {
+	width: 20%;
+	margin: 0 2.5%;
+	background-color: #fff;
+	text-align: center;
+}
+
+#pricing-table .price {
+	padding: 25px auto;
+	width: 100%;
+	background-color: #E8E8E8;
+}
+
+#pricing-table li {
+	text-transform: uppercase;
+	line-height: 2.5rem;
 }
