--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ h2 {
 h3 {
 	margin-bottom: 20px;
 	font-size: 1.5rem;
+	font-weight: 300;
 	text-transform: uppercase;
 }
 
@@ -69,7 +70,7 @@ li {
 
 .button {
 	display: inline-block;
-	margin: 0;
+	margin: 40px 0;
 	border-radius: 30px;
 	padding: 16px 28px;
 	border-radius: ;
@@ -243,7 +244,7 @@ nav a:hover{
 	height: 6px;
 }
 
-#about .progress-bar .progress .persentage {
+#about .progress-bar .progress .percentage {
 	position: relative;
     top: -25px;
     right: -20px;
@@ -316,13 +317,23 @@ nav a:hover{
 	text-align: center;
 }
 
+#pricing-table h3 {
+	margin-top: 25px;
+}
+
 #pricing-table .price {
-	padding: 25px auto;
+	padding: 30px 0;
 	width: 100%;
 	background-color: #E8E8E8;
+}
+
+#pricing-table ul {
+	padding: 40px 0;
+	border-bottom: 5px solid #ccc;
 }
 
 #pricing-table li {
 	text-transform: uppercase;
 	line-height: 2.5rem;
 }
+
