--- a/css/main-small.css
+++ b/css/main-small.css
@@ -64,7 +64,7 @@ li {
 
 .container {
 	display: block;
-	width: 1180px;
+	width: 100%;
 	margin: 0 auto;
 }
 
@@ -109,7 +109,7 @@ li {
 	box-sizing: border-box;
 	margin-bottom: 80px;
 	padding: 0 60px;
-	width: 50%;
+	width: 100%;
 }
 
 .col-4 {
@@ -117,7 +117,7 @@ li {
 	box-sizing: border-box;
 	padding: 0 ;
 	margin-bottom: 80px;
-	width: 33%;
+	width: 100%;
 }
 
 .col-3 {
@@ -125,7 +125,7 @@ li {
 	box-sizing: border-box;
 	margin-bottom: 80px;
 	padding: 0 ;
-	width: 25%;
+	width: 100%;
 }
 
 #logo {
@@ -133,17 +133,26 @@ li {
 }
 
 .icon-menu {
+	display: block;
+	float: right;
+}
+
+#menu-switch {
 	display: none;
 }
 
+#menu-switch:checked + nav { 
+	display: block;
+}
+
 nav {
-	float: right;
+	display: none;
 	line-height: 108px;
 	text-transform: uppercase;
 }
 
 nav li {
-	float: left;
+	/*float: left;*/
 }
 
 nav a {
@@ -157,7 +166,6 @@ nav a {
 
 nav a:hover{
 	color: #6FD2FA;
-	/*background-color: #998899;*/
 }
 
 #banner {
@@ -314,8 +322,8 @@ nav a:hover{
 }
 
 #pricing-table .col-3 {
-	width: 20%;
-	margin: 0 2.5%;
+	width: 100%;
+	/*margin: 0 2.5%;*/
 	background-color: #fff;
 	text-align: center;
 }
